--- a/client/index.html
+++ b/client/index.html
@@ -97,7 +97,7 @@
 				<p>Messages and account information are the property of the User.</p>
 				<p>All characters appearing on this site are fictitious. Any resemblance to real persons, living or dead, is purely coincidental.</p>
 				<p>Minors should use this site with parent approval/supervision.</p>
-				<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License. (<a href="#" target="_blank">More information</a>)</p>
+				<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License. (<a href="http://bentrask.com/git/?p=fsmash.git" target="_blank">Source code</a>)</p>
 			</div>
 
 			<div id="authenticate" class="authenticate absolute">
