Fix typo in rules.

--- a/client/index.html
+++ b/client/index.html
@@ -74,7 +74,7 @@
 					<li>Don’t spam.</li>
 					<li>Keep discussions on topic for the channel you are in.</li>
 					<li>Limit one account per person and per IP address (unless you get special permission).</li>
-					<li>Don’t cheating the ranking system.</li>
+					<li>Don’t cheat the ranking system.</li>
 				</ol>
 				<p>I’m trying to keep this list as minimal as possible. Don’t make me expand it.</p>
 				<p>Trolling is allowed as long as it follows the other rules.</p>
