--- a/client/index.html
+++ b/client/index.html
@@ -74,12 +74,13 @@
 					<li>Don’t spam.</li>
 					<li>Keep discussions on topic for the channel you are in.</li>
 					<li>Limit one account per person and per IP address (unless you get special permission).</li>
-					<li>Don’t cheat the ranking system.</li>
+					<li>Don’t try to cheat the rating system.</li>
+					<li>Don’t ask your opponents to rate you after you play. (Asking before you play is fine.)</li>
 				</ol>
 				<p>I’m trying to keep this list as minimal as possible. Don’t make me expand it.</p>
 				<p>Trolling is allowed as long as it follows the other rules.</p>
 				<p><b>If you believe someone has broken the rules</b>, please press the Report… button in the channel where it happened. No action will be taken immediately, but the last 50 messages in the channel will be saved for review. Please don’t abuse this feature.</p>
-				<p>One more note: If you submit a video that isn’t related to Brawl (or a video that’s really bad), it will probably get deleted.</p>
+				<p>If you submit a video that isn’t related to Brawl (or a video that’s really bad), it will probably get deleted.</p>
 				<div class="header">Hosting</div>
 				<p>Hosting is provided by <a href="https://www.nearlyfreespeech.net/" target="_blank">NearlyFreeSpeech.NET</a>.</p>
 				<p>Please consider donating to offset the hosting costs I pay and (perhaps) the time I spend maintaining and improving this site.</p>
