Make the game settings panel scroll together with the channel member list.

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="styles/base/index.css" type="text/css">
 		<link title="Dark" data-style-id="2" rel="alternate stylesheet" href="styles/dark/index.css" type="text/css">
 	</head>
-	<body class="background">
+	<body>
 		<div id="audio"></div>
 		<div id="body" class="absolute full invisible">
 			<div id="sidebar" class="absolute scroll"></div>
@@ -169,11 +169,8 @@
 				<div class="content absolute" data-id="content"></div>
 			</div>
 
-			<div id="info" class="info absolute background">
-				<div class="settings" data-id="settings"></div>
-				<div class="groups absolute scroll full" data-id="groups"></div>
-			</div>
-			<div id="game" class="game panel absolute">
+			<div id="info" class="info absolute full scroll"></div>
+			<div id="game" class="game panel">
 				<table class="settings">
 					<tbody>
 						<tr>
@@ -205,7 +202,7 @@
 				</div>
 			</div>
 
-			<div id="chat" class="chat absolute full background">
+			<div id="chat" class="chat absolute full">
 				<div class="content absolute scroll" data-id="scrollBox">
 					<div class="messages padding" data-id="messages"></div>
 					<div class="announcements" data-id="announcements"></div>
