--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Brawl Foe Finder @ fsmash.org</title>
+		<title>Brawl Faux Finder @ fsmash.org</title>
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-status-bar-style" content="default">
