--- a/client/index.html
+++ b/client/index.html
@@ -129,9 +129,9 @@
 					<div class="wrap alignTop"><input type="text" class="brawlName text padding" maxlength="5" title="Name" data-id="brawlName"><input type="text" class="friendCode text padding" maxlength="14" title="Friend Code" data-id="friendCode"><select class="style" title="Style"><optgroup label="Style" data-id="styles"><option>Default</option></optgroup></select><select class="sound" title="Soundset"><optgroup label="Soundset" data-id="soundsets"><option>Default</option></optgroup></select><input type="button" class="button padding signout" value="Sign Out…" data-id="signout"></div>
 					<div class="bio wrapper"><input type="text" class="text padding" maxlength="141" title="Player Bio" data-id="bio"></div>
 				</div>
-				<div class="channels padding" data-id="publicChannels"></div>
+				<div class="channels" data-id="publicChannels"></div>
 			</div>
-			<div id="publicChannel" class="channel overflow">
+			<div id="publicChannel" class="channel padding overflow">
 				<div class="commands floatRight"><input type="button" class="padding button" value="Join" data-id="join"></div>
 				<b data-id="title"></b>
 				<div class="padding light" data-id="description"></div>
