--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,7 @@
 				<img src="" alt="Thumbnail" width="120" class="floatLeft" data-id="thumbnail">
 				<div class="padding">
 					<div class="title nowrap"><a target="_blank" data-id="anchor">Loading video…</a></div>
-					<div class="nowrap"><b>Duration:</b> <span data-id="duration">Loading…</span></div>
+					<div class="nowrap"><b>Duration:</b> <span data-id="duration">--:--</span></div>
 					<div class="nowrap"><b>Uploaded by:</b> <a target="_blank" data-id="uploaderName">Loading…</a></div>
 					<div class="nowrap"><b>Submitted by:</b> <span data-id="submitterName"></span></div>
 				</div>
