Add a thumbnail placeholder image.

--- a/client/index.html
+++ b/client/index.html
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 			<div id="video" class="video padding">
-				<img src="" alt="Thumbnail" width="120" class="floatLeft" data-id="thumbnail">
+				<img src="thumbnail.gif" alt="Thumbnail" width="120" class="floatLeft" data-id="thumbnail">
 				<div class="padding">
 					<div class="title nowrap"><a target="_blank" data-id="anchor">Loading video…</a></div>
 					<div class="nowrap"><b>Duration:</b> <span data-id="duration">--:--</span></div>
