--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
 				<p>I’m trying to keep this list as minimal as possible. Don’t make me expand it.</p>
 				<p>Trolling is allowed as long as it follows the other rules.</p>
 				<p><b>If you believe someone has broken the rules</b>, please press the Report… button in the channel where it happened. No action will be taken immediately, but the last 50 messages in the channel will be saved for review. Please don’t abuse this feature.</p>
-				<p>If you submit a video that isn’t related to Brawl (or a video that’s really bad), it will probably get deleted.</p>
+				<p>If you submit a video that isn’t related to Brawl (or one that’s really bad), it will probably get deleted. No machinima.</p>
 				<div class="header">Donations</div>
 				<p>Please consider donating to offset the hosting costs I pay and (perhaps) the time I spend maintaining and improving this site.</p>
 				<div class="center padding">
