SmashMods.com link.

--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,7 @@
 					<li><a href="http://www.smashboards.com/showthread.php?t=208726" target="_blank">Smash World Forums thread + howto</a></li>
 					<li><a href="http://www.smashboards.com/group.php?groupid=1056" target="_blank">Smash World Forums group</a></li>
 					<li><a href="http://allisbrawl.com/group.aspx?id=7485" target="_blank">All is Brawl group</a></li>
+					<li><a href="http://www.smashmods.com/" target="_blank">Smash Mods</a></li>
 				</ol>
 				<div class="header">Rules</div>
 				<ol>
