Add note about donating.

--- a/client/index.html
+++ b/client/index.html
@@ -94,7 +94,7 @@
 						<img alt="" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
 					</form>
 				</div>
-				<p>Thanks to everyone who donates. <span class="signature nowrap">--Ben</span></p>
+				<p>Thanks to everyone who donates. (When you donate, there is a field where you can specify your username. Please fill it out so that I can thank you personally.) <span class="signature nowrap">--Ben</span></p>
 				<div class="header">Legal Information</div>
 				<p>Messages and account information are the property of the User.</p>
 				<p>All characters appearing on this site are fictitious. Any resemblance to real persons, living or dead, is purely coincidental.</p>
