New, cleaner, more reliable, faster(?) static file serving.

--- a/client/index.html
+++ b/client/index.html
@@ -224,7 +224,7 @@
 
 			<div id="admin" class="absolute full padding scroll admin">
 				<input type="button" class="button padding" data-id="signupAllowed">
-				<input type="button" class="button padding" value="Clear file cache" data-id="uncache">
+				<input type="button" class="button padding" value="Rescan files" data-id="rescan">
 				<input type="button" class="button padding" value="Reconfigure" data-id="reconfigure">
 				<input type="button" class="button padding" value="Update rankings" data-id="updateRankings">
 				<input type="button" class="button padding" value="Update statistics" data-id="updateStatistics">
