--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,7 @@
 					<div class="title nowrap"><a target="_blank" data-id="anchor">Loading video…</a></div>
 					<div class="nowrap"><b>Duration:</b> <span data-id="duration">--:--</span></div>
 					<div class="nowrap"><b>Uploaded by:</b> <a target="_blank" data-id="uploaderName">Loading…</a></div>
+					<div class="nowrap"><b>Upload date:</b> <span data-id="uploadDate">Loading…</span></div>
 					<div class="nowrap"><b>Submitted by:</b> <span data-id="submitterName"></span></div>
 				</div>
 			</div>
