Use rel=nofollow.

--- a/client/index.html
+++ b/client/index.html
@@ -92,7 +92,7 @@
 				<p>All characters appearing on this site are fictitious. Any resemblance to real persons, living or dead, is purely coincidental.</p>
 				<p>Minors should use this site with parent approval/supervision.</p>
 				<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License.</p>
-				<p><a href="http://github.com/btrask/fsmash" target="_blank">Source code</a></p>
+				<p><a rel="nofollow" href="http://github.com/btrask/fsmash" target="_blank">Source code</a></p>
 			</div>
 
 			<div id="subscribe" class="subscribe static absolute full scroll">
