--- a/client/index.html
+++ b/client/index.html
@@ -260,6 +260,7 @@
 				<input type="button" class="button padding" value="Rescan files" data-id="rescan">
 				<input type="button" class="button padding" value="Reconfigure" data-id="reconfigure">
 				<input type="button" class="button padding" value="Update rankings" data-id="updateRankings">
+				<input type="button" class="button padding" value="Update channel ancestors" data-id="updateChannelAncestors">
 				<input type="button" class="button padding" value="Update statistics" data-id="updateStatistics">
 				<pre data-id="statistics"></pre>
 				<pre data-id="reports"></pre>
