Move the CSS definition for .invisible into the main HTML file. This should prevent it from ever appearing, such as during loading.

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="default">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;">
 
+		<style type="text/css">.invisible{display:none;}</style>
 		<link rel="stylesheet" href="styles/base/index.css" type="text/css">
 		<link title="Dark" data-style-id="2" rel="alternate stylesheet" href="styles/dark/index.css" type="text/css">
 		<link title="Greenscreen" data-style-id="3" rel="alternate stylesheet" href="styles/greenscreen/index.css" type="text/css">
