Fix problems related to the donate page that prevented HTML validation.

--- a/client/index.html
+++ b/client/index.html
@@ -101,7 +101,7 @@
 				<p>This website, <i>fsmash.org</i>, has an ongoing cost of time and money to run. In order to keep the quality of the site high, please consider contributing.</p>
 				<p><strong>Thank you!</strong> to everyone who helps out. <span class="signature nowrap">--Ben</span></p>
 				<form name="paypalSubscribe" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-					<table border="0" cellspacing="0" cellpadding="0">
+					<table>
 						<tr>
 							<td>
 								<select name="os0" class="padding">
@@ -114,7 +114,7 @@
 								</select>
 							</td>
 							<td>
-								<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_subscribe_LG.gif" border="0" name="submit" alt="PayPal" class="padding">
+								<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_subscribe_LG.gif" name="submit" alt="PayPal" class="padding">
 							</td>
 							<td>
 								(PayPal)
@@ -126,7 +126,7 @@
 					<input type="hidden" name="on0" value="">
 					<input type="hidden" name="currency_code" value="USD">
 					<input type="hidden" name="custom" value="" data-id="custom">
-					<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+					<img alt="" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
 				</form>
 				<div class="header">Fine Print</div>
 				<div class="light">
