Client side channel emptying.

--- a/client/index.html
+++ b/client/index.html
@@ -202,7 +202,16 @@
 				<div class="content absolute" data-id="content"></div>
 			</div>
 
-			<div id="info" class="info absolute full scroll"></div>
+			<div id="info" class="info absolute full scroll">
+				<div class="panels" data-id="panels">
+					<div class="admin panel wrap invisible" data-id="admin">
+						<div class="line">
+							<input type="button" class="button padding" value="Empty…" data-id="empty">
+						</div>
+					</div>
+				</div>
+				<div class="groups" data-id="groups"></div>
+			</div>
 			<div id="game" class="game panel">
 				<table class="table settings">
 					<tbody>
