More donation rates.

--- a/client/index.html
+++ b/client/index.html
@@ -105,12 +105,10 @@
 						<tr>
 							<td>
 								<select name="os0" class="padding">
-									<option value="Very Helpful">
-										Very Helpful - $5.00USD/mo.
-									</option>
-									<option value="Extremely Helpful">
-										Extremely Helpful - $10.00USD/mo.
-									</option>
+									<option value="Helpful">Helpful - $1.00USD/mo.</option>
+									<option value="Very Helpful">Very Helpful - $5.00USD/mo.</option>
+									<option value="Extremely Helpful">Extremely Helpful - $10.00USD/mo.</option>
+									<option value="Discount Rate">Discount Rate - $10.00USD/yr.</option>
 								</select>
 							</td>
 							<td>
