--- a/client/index.html
+++ b/client/index.html
@@ -126,11 +126,16 @@
 					<input type="hidden" name="custom" value="" data-id="custom">
 					<img alt="" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
 				</form>
+				<div class="header">Benefits</div>
+				<div>
+					<p>Subscribers are thanked with the “Subscriber” title and a small <span class="name subscriber">icon</span> that may appear in their chat messages.</p>
+					<p>Subscribers may ask to have their usernames changed. Name changes will be granted infrequently (about once per year per person) and on a case-by-case basis. Usernames will no longer be changed for non-subscribers.</p>
+					<p>In the future, subscribers will be able to host tournaments using online bracket software that is currently in development. (This feature is not yet complete and subject to change.)</p>
+				</div>
 				<div class="header">Fine Print</div>
 				<div class="light">
-					<p>Subscribers are thanked with the “Subscriber” title and a small <span class="name subscriber">icon</span> that may appear in their chat messages.</p>
 					<p>Subscribing does not grant any special rights or privileges. You must still follow all of the site rules. If you are banned, your subscription fee will not be refunded.</p>
-					<p>If you have donated at any time in the past, your donation will automatically be credited. If you donated, but for some reason you weren’t credited, please contact me.</p>
+					<p>If you have donated at any time in the past, your donation will automatically be credited at a rate of $5.00USD/mo. If you donated, but for some reason you weren’t credited, please contact me.</p>
 				</div>
 			</div>
 
