New config system.

--- a/client/index.html
+++ b/client/index.html
@@ -279,7 +279,7 @@
 						<input type="button" class="button padding" data-id="signupAllowed">
 					</div>
 					<div class="line">
-						<input type="button" class="button padding" value="Update files" data-id="rescan"><input type="button" class="button padding" value="Update state" data-id="reconfigure"><input type="button" class="button padding" value="Update rankings" data-id="updateRankings"><input type="button" class="button padding" value="Update channel ancestors" data-id="updateChannelAncestors">
+						<input type="button" class="button padding" value="Update files" data-id="updateFiles"><input type="button" class="button padding" value="Update config" data-id="updateConfig"><input type="button" class="button padding" value="Update database" data-id="updateDatabase"><input type="button" class="button padding" value="Update rankings" data-id="updateRankings"><input type="button" class="button padding" value="Update channel ancestors" data-id="updateChannelAncestors">
 					</div>
 				</div>
 				<div class="header">Statistics</div>
