Simpler: US$X instead of $X.XXUSD.

--- a/client/index.html
+++ b/client/index.html
@@ -105,10 +105,10 @@
 						<tr>
 							<td>
 								<select name="os0" class="padding">
-									<option value="Helpful">Helpful - $1.00USD/mo.</option>
-									<option value="Very Helpful">Very Helpful - $5.00USD/mo.</option>
-									<option value="Extremely Helpful">Extremely Helpful - $10.00USD/mo.</option>
-									<option value="Discount Rate">Discount Rate - $10.00USD/yr.</option>
+									<option value="Helpful">Helpful - US$1/mo.</option>
+									<option value="Very Helpful">Very Helpful - US$5/mo.</option>
+									<option value="Extremely Helpful">Extremely Helpful - US$10/mo.</option>
+									<option value="Discount Rate">Discount Rate - US$10/yr.</option>
 								</select>
 							</td>
 							<td>
